# skua-armory

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  description.ext  meta.cpp  mod.cpp
extension/: AGENTS.md  Cargo.toml  README.md  build.sh  install_deps.sh
extension/src/: lib.rs  uuid.rs
extension/src/certification/: mod.rs  types.rs
extension/src/core/: context.rs  mod.rs  runtime.rs  session.rs
extension/src/database/: bootstrap.rs  commands.rs  connect.rs  db.rs  heartbeat.rs  init.rs  mod.rs  pool.rs  schema.rs  sql  sql.rs  state.rs  test_support.rs  tests.rs  types.rs
extension/src/database/sql/: 010_master_ranks.sql  011_master_certifications.sql  012_master_campaigns.sql  020_master_player_info.sql  022_master_player_info_idx_banned.sql  030_master_player_certs.sql  031_master_player_certs_idx_steam.sql  032_master_player_certs_idx_cert.sql  050_function_update_heartbeat.sql  052_function_promote_ephemeral.sql  054_function_expire_stale_sessions.sql  100_campaign_schema.sql  110_campaign_player_data.sql  120_campaign_player_world_data.sql  130_campaign_world_data.sql  210_session_player_data.sql  220_session_function_promote.sql  README.md  create_campaign_player_data.sql  create_campaign_schema.sql  create_campaign_world_data.sql  create_master_certifications.sql  create_master_ranks.sql  (+3 more)
extension/src/domain/: ids.rs  mod.rs
extension/src/editor/: description.ext  mod.rs
extension/src/error/: db.rs  mod.rs  query.rs
extension/src/logging/: commands.rs  layer.rs  mod.rs
extension/src/persistence/: commands.rs  mod.rs  types.rs
(+354 files in other folders)
