[package]
name = "skua"
version = "0.1.0"
edition = "2024"

[lib]
name = "skua"
crate-type = ["cdylib", "rlib"]

[dependencies]
arma-rs = { version = "1.12.1", features = ["serde", "serde_json", "uuid"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
deadpool-postgres = { version = "0.14.1"}
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1", "with-uuid-1"] }
tokio = { version = "1.49.0", features = ["full"] }
regex = "1.12.2"
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = "1.0.228"
serde_json = "1.0.149"
futures = "0.3.31"
